# nebula

./: LICENSE  README.md  README_CAT.md  README_CATALÀ.md  README_ENGLISH.md  README_ESPAÑOL.md
resources/: UI_installer.iss  args.gn
resources/logo/: product_logo_32.xpm
source/chromium/: .gclient_entries  .gclient_previous_sync_commits  .gcs_entries
source/chromium/.cipd/: tagcache.db
source/chromium/.cipd/pkgs/10/: _current.txt
source/chromium/.cipd/pkgs/10/M3bfMthTauI00lkG04mTKbC04oHKw1vn19eyv0w52pkC/.cipdpkg/: manifest.json
source/chromium/.cipd/pkgs/14/: _current.txt
source/chromium/.cipd/pkgs/14/oLEmgcafBdFBbNMsdWymaVOHuNl7AN0EglW7Uwyp-t8C/.cipdpkg/: manifest.json
source/chromium/.cipd/pkgs/15/: _current.txt
source/chromium/.cipd/pkgs/15/l_abkESaMUG9_6MeOh52BY_o3Emj3LIwgEM0J3AAMI4C/.cipdpkg/: manifest.json
source/chromium/.cipd/pkgs/17/: _current.txt
source/chromium/.cipd/pkgs/17/3WF0nftJsZDqVrlVnT9Xh7k-63gXweJnlnRv7BwekqsC/.cipdpkg/: manifest.json
source/chromium/.cipd/pkgs/18/: _current.txt
source/chromium/.cipd/pkgs/18/hvDJjiep6YMvN2JTtqfWlcgqJnS7K-RICv7cQ7RUhaYC/.cipdpkg/: manifest.json
source/chromium/.cipd/pkgs/19/: _current.txt
source/chromium/.cipd/pkgs/19/tXwzfvuHcTx3aNNRVqkt3N8hvwEAjw8ab8B6RAfKjoYC/.cipdpkg/: manifest.json
source/chromium/.cipd/pkgs/20/: _current.txt
source/chromium/.cipd/pkgs/23/: _current.txt
source/chromium/.cipd/pkgs/25/: _current.txt
source/chromium/.cipd/pkgs/26/: _current.txt
source/chromium/.cipd/pkgs/3/: _current.txt
source/chromium/.cipd/pkgs/9/: _current.txt
(+6 files in other folders)
